methods.args.MethodsArgs.scala.error
Compilation error:
MethodsArgs:5: error: type mismatch;
 found   : Unit
 required: Boolean
    for (i <- 1 to nbPas) { 
           ^MethodsArgs:10: error: type mismatch;
 found   : Unit
 required: Boolean
    recule();
          ^